2006-05-15  Adam Jackson  <ajax@freedesktop.org>

	* configure.ac:
	* hw/xfree86/os-support/linux/lnx_acpi.c:
	Bug #5209: Fix APM/ACPI support, again. (Michel Dänzer, Valery 
	Inozemtsev)

2006-05-15  Adam Jackson  <ajax@freedesktop.org>

	* Xext/sync.c:
	Bug #6903: Fix a crash in the Sync extension.  (Søren Sandmann)

2006-05-15  Adam Jackson  <ajax@freedesktop.org>

	* configure.ac:
	Bug #6916: Build fix for non-Linux.  (Matthieu Herrb)

2006-05-12  Adam Jackson  <ajax@freedesktop.org>

	* configure.ac:
	Bump to 1.0.99.903

2006-05-10  Adam Jackson  <ajax@freedesktop.org>

	* record/record.c:
	Bug #3561: Crash fix in the Record extension. (Paul Anderson)

2006-05-09  Adam Jackson  <ajax@freedesktop.org>

	* render/render.c:
	Bug #6867: Yet another Render crash fix. (Michel Dänzer)

2006-05-09  Adam Jackson  <ajax@freedesktop.org>

	* configure.ac:
	* hw/xfree86/Makefile.am:
	* hw/xfree86/common/Makefile.am:
	* hw/xfree86/common/xf86Globals.c:
	* hw/xfree86/common/xf86Init.c:
	* hw/xfree86/os-support/linux/Makefile.am:
	* hw/xfree86/os-support/linux/lnx_acpi.c:
	* hw/xfree86/os-support/linux/lnx_apm.c:
	Bug #5209: Re-enable building APM and ACPI support. (Michel 
	Dänzer)

2006-05-03  Alan Coopersmith  <alan.coopersmith@sun.com>

        * configure.ac:
        * exa/Makefile.am:
        Fix Solaris build with Sun compilers to work when exa is built before
        hw/xfree86/os-support/solaris (as it is by default now).

2006-05-03  Alan Coopersmith  <alan.coopersmith@sun.com>

	* os/WaitFor.c:
        Use min() [defined in include/misc.h] instead of MIN() [not defined in
        any Xorg header].

2006-05-02  Adam Jackson  <ajax@freedesktop.org>

	* render/mitri.c:
	Bug #6642: Fix buffer overflow in Render.  (CVE 2006-1526, patch
	from Eric Anholt)

2006-04-28  Adam Jackson  <ajax@freedesktop.org>

	* configure.ac:
	Bump to 1.0.99.902

2006-04-28  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/common/xf86pciBus.c: